--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,6 @@
     font-weight: 400;
 
     color-scheme: light dark;
-    color: hsl(38, 8%, 8%);
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -19,13 +18,14 @@ html {
 
 @font-face {
     font-family: 'Varela Round';
-    src: url("@/assets/fonts/Varela-Round.ttf");
+    src: url("@/assets/Varela-Round.ttf");
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Varela Round', Arial, sans-serif;
 }
 
 li {
