--- a/src/style/ui.scss
+++ b/src/style/ui.scss
@@ -46,7 +46,7 @@
 // 弹出框表单：修改弹出框样式
 .dialog-form-container {
     .el-dialog {
-        min-width: 700px;
+        width: 700px;
     }
 
     .el-dialog__body {
